--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,45 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
+.todo-container {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, #22d3ee, #fb7185, #d8b4fe);
+  color: #fff;
+  display: flex;
+}
+
+.left-sidebar {
+  background: linear-gradient(to top left, #059669, #10b981);
+
+  align-self: center;
+  width: 16%;
+  margin-left: 1rem;
+  height: 92%;
+
+  border: 1px solid none;
+  border-radius: 12px;
+  box-shadow: 2px 2px 2px 2px #18181b90;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.todo-main {
+  background: linear-gradient(to top left, #059669, #10b981);
+
+  align-self: center;
+  margin: 0 2rem;
+  width: calc(68% - 3rem);
+  height: 92%;
+  border: 1px solid none;
+  border-radius: 12px;
+
+  box-shadow: 2px 2px 2px 2px #18181b90;
+}
