--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Alkatra&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -5,23 +7,25 @@
 body {
   height: 100vh;
   width: 100vw;
+  font-family: "Alkatra", cursive;
 }
 
 .todo-container {
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom right, #22d3ee, #fb7185, #d8b4fe);
+  background: linear-gradient(to bottom right, #f5d0fe, #fb7185, #d8b4fe);
   color: #fff;
   display: flex;
 }
 
 .left-sidebar {
-  background: linear-gradient(to top left, #059669, #10b981);
+  background: linear-gradient(to bottom right, #0284c7, #0ea5e9);
 
   align-self: center;
   width: 16%;
-  margin-left: 1rem;
   height: 92%;
+  padding: 1rem;
+  margin-left: 2rem;
 
   border: 1px solid none;
   border-radius: 12px;
@@ -31,12 +35,27 @@ body {
   flex-direction: column;
 }
 
+.left-sidebar-heading {
+  text-align: center;
+  font-size: 36px;
+  font-weight: 800;
+  letter-spacing: 0.2rem;
+  text-decoration: underline;
+
+  margin-top: 1rem;
+}
+
+.left-sidebar-content {
+  margin-top: 2rem;
+  font-size: 32px;
+}
+
 .todo-main {
-  background: linear-gradient(to top left, #059669, #10b981);
+  background: linear-gradient(to bottom right, #0284c7, #0ea5e9, #38bdf8);
 
   align-self: center;
   margin: 0 2rem;
-  width: calc(68% - 3rem);
+  width: calc(68% - 4rem);
   height: 92%;
   border: 1px solid none;
   border-radius: 12px;
