--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -120,4 +120,51 @@ img.plus {
   border-radius: 12px;
 
   box-shadow: 2px 2px 2px 2px #18181b90;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.todo-form {
+  display: flex;
+  margin-top: auto;
+
+  width: 100%;
+
+  justify-content: center;
+}
+
+.todo-typing-area {
+  display: flex;
+  gap: 1rem;
+
+  width: 100%;
+  padding: 2rem 6rem;
+
+  border: 1px solid none;
+  border-radius: 0 0 12px 12px;
+  box-shadow: inset 0px 2px 2px 2px #18181b90;
+  background-color: #0284c7;
+}
+
+.return-image {
+  height: 2.5rem;
+  width: auto;
+
+  align-self: end;
+}
+
+#todo-title {
+  display: flex;
+  align-items: center;
+
+  cursor: text;
+
+  width: 90%;
+  height: 2rem;
+  margin-top: auto;
+  border: 2px solid none;
+  border-radius: 6px;
+
+  outline: none;
 }
