--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -56,7 +56,8 @@ body {
 }
 
 .pencil:hover,
-.plus:hover {
+.plus:hover,
+.return-image:hover {
   cursor: pointer;
   opacity: 0.7;
   scale: 1.05;
@@ -99,6 +100,10 @@ img.plus {
 
 .project-list::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
+}
+
+.project-title {
+  transition: 0.3s ease;
 }
 
 .project-title:hover {
@@ -148,7 +153,7 @@ img.plus {
 }
 
 .return-image {
-  height: 2.5rem;
+  height: 100%;
   width: auto;
 
   align-self: end;
@@ -156,15 +161,28 @@ img.plus {
 
 #todo-title {
   display: flex;
-  align-items: center;
+  align-items: end;
 
   cursor: text;
 
+  font-size: 1.5rem;
+  font-family: "Alkatra", cursive;
+
   width: 90%;
   height: 2rem;
+  line-height: 2rem;
   margin-top: auto;
   border: 2px solid none;
   border-radius: 6px;
-
   outline: none;
+}
+
+.todo-button {
+  height: 3rem;
+  width: auto;
+
+  background: none;
+  border: none;
+
+  padding-top: 0.5rem;
 }
