--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,10 @@ body {
   font-family: "Alkatra", cursive;
 }
 
+.hide {
+  display: none;
+}
+
 .todo-container {
   width: 100%;
   height: 100%;
@@ -64,11 +68,20 @@ body {
   gap: 0.5rem;
 }
 
+.header-name-label {
+  margin-top: 1.5rem;
+
+  border-bottom: 1px solid #ce96a6;
+
+  font-size: 1.5rem;
+  font-family: "Alkatra", cursive;
+  font-weight: 800;
+  color: snow;
+}
+
 #header-name {
   width: 100%;
   height: 25%;
-
-  margin-top: 3rem;
 
   background: linear-gradient(to bottom right, #86efac, #34d399, #2dd4bf);
   border: 1px solid #ce96a6;
