--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,10 +12,6 @@ body {
   font-family: "Alkatra", cursive;
 }
 
-.hide {
-  display: none;
-}
-
 .todo-container {
   width: 100%;
   height: 100%;
@@ -93,7 +89,7 @@ body {
 
   font-size: 1.3rem;
   font-family: "Alkatra", cursive;
-  color: snow;
+  color: #db2777;
 }
 
 #header-name:hover {
@@ -126,6 +122,7 @@ body {
   justify-content: space-between;
   border-bottom: 1px solid #ffffff80;
   align-items: end;
+  margin-top: 0.5rem;
 }
 
 .todo-list-header h1 {
@@ -306,4 +303,8 @@ img.plus {
   border: none;
 
   padding-top: 0.5rem;
+}
+
+.hide {
+  display: none;
 }
