Add date created to to-dos

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -232,6 +232,12 @@ img.plus {
 
 .to-do {
   position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.to-do span {
+  font-size: 70%;
 }
 
 .crossed {
