--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,7 +18,9 @@ body {
   color: #fff;
   display: flex;
 }
+
 /* 
+
 
 
 Sidebar Styling
@@ -26,11 +28,12 @@ Sidebar Styling
 
 
 */
+
 .sidebar {
   background: linear-gradient(to bottom right, #0284c7, #0ea5e9);
 
   align-self: center;
-  width: 20%;
+  width: calc(25% - 2rem);
   height: calc(100% - 4rem);
   padding: 1rem;
   margin-left: 2rem;
@@ -221,7 +224,7 @@ Todo Display styling
 
   align-self: center;
   margin: 0 2rem;
-  width: 75%;
+  width: calc(75% - 4rem);
   height: calc(100% - 4rem);
   border: 1px solid none;
   border-radius: 12px;
@@ -231,6 +234,8 @@ Todo Display styling
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  flex: 1;
 }
 
 .todo-list {
@@ -256,7 +261,6 @@ Todo Display styling
   display: flex;
   align-items: center;
   gap: 1rem;
-  user-select: auto;
 }
 
 .circle {
@@ -291,6 +295,8 @@ Todo Display styling
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+  width: calc(100% - 4rem);
 }
 
 .to-do p:hover {
@@ -404,6 +410,71 @@ img.cog {
   border: none;
 
   padding-top: 0.5rem;
+}
+
+/* 
+
+
+Todo Info Styling
+
+
+
+*/
+
+.todo-info {
+  background: linear-gradient(to bottom right, #0284c7, #0ea5e9, #38bdf8);
+
+  align-self: center;
+  width: calc(25% - 2rem);
+  height: calc(100% - 4rem);
+  padding: 1rem;
+  margin-right: 2rem;
+
+  border: 1px solid none;
+  border-radius: 12px;
+  box-shadow: 2px 2px 2px 2px #18181b90;
+
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+}
+
+.todo-info h2 {
+  font-size: 32px;
+  border-bottom: 1px solid #ffffff80;
+  font-weight: 800;
+}
+
+.todo-info h2:hover,
+.todo-info div p:hover {
+  cursor: text;
+}
+
+.todo-info div {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 28px;
+  line-height: 100%;
+}
+
+.todo-info div h3 {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.todo-info div p {
+  width: 60%;
+  font-size: 20px;
+  word-break: break-word;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.todo-info div p:hover {
+  overflow: visible;
+  white-space: normal;
 }
 
 .hide {
