--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,25 +105,6 @@ Sidebar Styling
   cursor: text;
 }
 
-.todo-title-button {
-  width: 50%;
-  height: 25%;
-
-  background: linear-gradient(to bottom right, #f5d0fe, #fb7185, #d8b4fe);
-
-  border: 1px solid #ce96a6;
-  border-radius: 7px;
-  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-
-  font-size: 1.5rem;
-  font-family: "Alkatra", cursive;
-  color: snow;
-}
-
-.todo-title-button:hover {
-  cursor: pointer;
-}
-
 .todo-list-header {
   height: 30%;
   width: 100%;
@@ -438,6 +419,8 @@ Todo Info Styling
   flex-direction: column;
 
   gap: 1rem;
+
+  position: relative;
 }
 
 .todo-info h2 {
@@ -475,6 +458,21 @@ Todo Info Styling
 .todo-info div p:hover {
   overflow: visible;
   white-space: normal;
+}
+
+.todo-info-delete {
+  position: absolute;
+  height: 1.5rem;
+  width: 1.5rem;
+  top: 1rem;
+  left: calc(100% - 2rem);
+
+  transition: 0.3s ease;
+}
+
+.todo-info-delete:hover {
+  scale: 1.05;
+  cursor: pointer;
 }
 
 .hide {
