--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -423,43 +423,6 @@ Todo Info Styling
   position: relative;
 }
 
-.item-info h2 {
-  font-size: 32px;
-  border-bottom: 1px solid #ffffff80;
-  font-weight: 800;
-}
-
-.item-info h2:hover,
-.item-info div p:hover {
-  cursor: text;
-}
-
-.item-info div {
-  display: flex;
-  gap: 0.5rem;
-  font-size: 28px;
-  line-height: 100%;
-}
-
-.item-info div h3 {
-  font-weight: 500;
-  font-size: 20px;
-}
-
-.item-info div p {
-  width: 60%;
-  font-size: 20px;
-  word-break: break-word;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.item-info div p:hover {
-  overflow: visible;
-  white-space: normal;
-}
-
 .info-delete {
   position: absolute;
   height: 1.5rem;
@@ -473,6 +436,100 @@ Todo Info Styling
 .info-delete:hover {
   scale: 1.05;
   cursor: pointer;
+}
+
+.item-info-top,
+.item-info-bottom,
+.item-info-bottom form {
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+
+  position: relative;
+}
+
+.item-info h2 {
+  font-size: 32px;
+  border-bottom: 1px solid #ffffff80;
+  font-weight: 800;
+}
+
+.item-info-top h2:hover,
+.item-info-top div p:hover,
+.item-info-bottom input#todo-name,
+.item-info-bottom textarea {
+  cursor: text;
+}
+
+.item-info-top div,
+.item-info-bottom div {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 28px;
+  line-height: 100%;
+}
+
+.item-info-top div h3,
+.item-info-bottom label {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.item-info-top div p {
+  width: 60%;
+  font-size: 20px;
+  word-break: break-word;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.item-info-top div p:hover {
+  overflow: visible;
+  white-space: normal;
+}
+
+.item-info-bottom {
+  margin-top: 5rem;
+}
+
+.item-info-bottom input,
+.item-info-bottom select,
+.item-info-bottom textarea {
+  margin-left: auto;
+}
+
+.item-info-bottom #todo-date {
+  cursor: pointer;
+}
+
+.item-info-bottom div:last-child {
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.item-info-bottom .change-todo-button {
+  width: 8rem;
+  height: 3rem;
+
+  background: linear-gradient(to bottom right, #f5d0fe, #fb7185, #d8b4fe);
+
+  border: 1px solid #ce96a6;
+  border-radius: 7px;
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+
+  font-size: 1.5rem;
+  font-family: "Alkatra", cursive;
+  color: snow;
+
+  text-align: center;
+  line-height: 3rem;
+}
+
+.change-todo-button:hover {
+  cursor: pointer;
+  opacity: 0.9;
 }
 
 .hide {
