--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -230,14 +230,13 @@ Todo Display styling
 
   font-size: 1.5rem;
   list-style-position: inside;
-  list-style-type: circle;
 
   -ms-overflow-style: none; /*for Internet Explorer, Edge*/
   scrollbar-width: none; /*for Firefox*/
   overflow-y: scroll;
 }
 
-.to-do {
+.todo {
   position: relative;
   display: flex;
   align-items: center;
@@ -249,11 +248,11 @@ Todo Display styling
   height: 1.5rem;
   width: 1.5rem;
   min-height: 1.5rem;
+  min-width: 1.5rem;
   border: 1px solid #fff;
   border-radius: 50%;
 
   position: relative;
-
   align-self: start;
 }
 
@@ -271,7 +270,7 @@ Todo Display styling
   width: auto;
 }
 
-.to-do p {
+.todo-item {
   word-break: break-word;
   overflow: hidden;
   white-space: nowrap;
@@ -280,27 +279,17 @@ Todo Display styling
   width: calc(100% - 4rem);
 }
 
-.to-do p:hover {
+.todo-item:hover {
   overflow: visible;
   white-space: normal;
 }
 
-.to-do p:hover,
-.to-do span:hover {
+.todo-item:hover {
   cursor: text;
 }
 
-.to-do span {
-  margin-left: auto;
-  display: none;
-  font-size: 70%;
-  font-style: italic;
-  font-weight: 800;
-  letter-spacing: 1px;
-}
-
 /* 
-.to-do:hover span {
+.todo:hover span {
   display: inline;
 } */
 
@@ -313,21 +302,18 @@ img.cog {
 }
 
 .cog:hover,
-.to-do p.delete-icon:hover {
+.todo p.delete-icon:hover {
   opacity: 0.9;
   scale: 1.15;
   cursor: pointer;
 }
 
-.to-do .delete-icon {
+.todo .delete-icon {
   font-size: 80%;
   margin-left: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: normal;
+  margin-right: 0.3rem;
+  font-family: Arial;
   font-weight: 1000;
-  margin-right: 0.35rem;
-
-  align-self: start;
 }
 
 .crossed {
@@ -396,7 +382,7 @@ img.cog {
 /* 
 
 
-Todo Info Styling
+Todo/Project Info Styling
 
 
 
@@ -443,9 +429,7 @@ Todo Info Styling
 .item-info-bottom form {
   display: flex;
   flex-direction: column;
-
   gap: 1rem;
-
   position: relative;
 }
 
@@ -490,7 +474,7 @@ Todo Info Styling
 }
 
 .item-info-bottom {
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 .item-info-bottom #todo-name,
@@ -541,6 +525,7 @@ Todo Info Styling
 
   text-align: center;
   line-height: 3rem;
+  margin-top: auto;
 }
 
 .change-item-button:hover {
